--- a/ProductCatalogWebApi/appsettings.json
+++ b/ProductCatalogWebApi/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "ConnectionStrings": {"ProductsDbConnection": "Data Source=Products.db"},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
