--- a/ProductCatalogClient/appsettings.json
+++ b/ProductCatalogClient/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ProductCatalogWebApi": {
-    "Endpoint": ""
+    "Endpoint": "https://localhost:7137/"
   },
   "Logging": {
     "LogLevel": {
